# pokemons-service/swagger.yaml
@@ -25,6 +25,27 @@ paths:
           description: "Unexpected Error"
           schema:
             $ref: "#/definitions/Error"
+    post:
+      tags:
+        - "product"
+      summary: "Create a new product"
+      description: "Creates a new product"
+      parameters:
+        - name: product
+          required: true
+          in: body
+          description: "A product to create"
+          schema:
+            $ref: "#/definitions/CreateProductRequest"
+      responses:
+        "201":
+          description: "Created"
+        "400":
+          description: "Bad request"
+        default:
+          description: "Unexpected Error"
+          schema:
+            $ref: "#/definitions/Error" 
   /products/{productID}:
     get:
       tags:
@@ -52,6 +73,21 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 definitions:
+  CreateProductRequest:
+    type: "object"
+    required:
+      - "title"
+    properties:
+      title:
+        type: "string"
+      description:
+        type: "string"
+      price:
+        type: "integer"
+        format: "int64"
+      count:
+        type: "integer"
+        format: "int64"
   Product:
     type: "object"
     required:
@@ -65,6 +101,9 @@ definitions:
       description:
         type: "string"
       price:
+        type: "integer"
+        format: "int64"
+      count:
         type: "integer"
         format: "int64"
   ProductList:
